Unwanted code removing and layout height overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -109,4 +109,9 @@ body {
 .html-content {
   scrollbar-width: thin !important;
   scrollbar-color: #0e2071 #fd9646 !important;
+  
+}
+
+.html-content .MsoNormal span{
+    position: unset !important;
 }
